--- a/componentselection.html
+++ b/componentselection.html
@@ -10,13 +10,16 @@
   <style>
     /* General Styling */
     body {
+      background-color: rgb(68, 68, 68);
       font-family: Arial, sans-serif;
+      color: white;
       margin: 20px;
+      font-weight: bolder
     }
     /* Header formatting */
-    h1 { font-size: 2em; color: #333; }
-    h2 { font-size: 1.75em; color: #444; }
-    h3 { font-size: 1.5em; color: #555; }
+    h1 { font-size: 2em; color: #ffffff; }
+    h2 { font-size: 1.75em; color: #ffffff; }
+    h3 { font-size: 1.5em; color: #ffffff; }
     /* Paragraph Styling */
     p {
       font-size: 1em;
@@ -30,11 +33,14 @@
       margin-bottom: 1em;
     }
     th, td {
-      border: 1px solid #ddd;
+      border: 1px solid #000000;
+      background-color: #ffffff;
       padding: 8px;
+      color: black;
     }
     th {
-      background-color: #f2f2f2;
+      background-color: #000000;
+      color: rgb(255, 255, 255);
       text-align: left;
     }
     /* Image Styling */
@@ -44,13 +50,14 @@
     /* Line Break to make content easier to read*/
     hr {
         border: none;
-        border-top: 2px solid #333;
+        border-top: 2px solid #ffffff;
         margin: 20px 0;
     }
     /* Unordered List Styling */
     ul {
         margin: 0;       /* Removes default margin */
         padding-left: 20px; /* Adjusts bullet indentation */
+        color: black;
     }
     /* List item styling */
     li {
@@ -71,7 +78,7 @@
 </head>
 
 <body>
-    
+
     <!-- Page Header -->
      <h1>Individual Component Selection</h1>
      <p> This page logs my individual component selection. Included are both my considered options for all major subsystems,
