--- a/componentselection.html
+++ b/componentselection.html
@@ -192,7 +192,7 @@
     <!-- Line break to make page easier to read -->
     <hr>
 
-    <h2>Major Hardware Selection</h2>
+    <h1>Major Hardware Selection</h1>
 
     <!-- Microcontroller Dropdown -->
     <div class="dropdown-container" id="microcontrollerContainer">
@@ -342,7 +342,7 @@
     <!-- Regulator Dropdown -->
     <div class="dropdown-container-alt" id="powerRegulatorContainer">
 
-        <div class="dropdown" onclick="toggleTable('Power Regulator')">Power Regulator</div>
+        <div class="dropdown" onclick="toggleTable('Power Regulator')">Power Regulator Selection</div>
 
         <div id="Power Regulator" class="hidden">
 
@@ -479,10 +479,14 @@
 
         <div id="Motordriver" class="hidden">
 
-            <p>For motor driver selection, I appear to be severely limited. The primary reason being that many of these motor drivers come
-                pre-mounted onto daughter-boards, which require justification to use (As per the project requirements). Ideally the control
-                logic is at the same voltage as the microcontroller. It also requires control over a serial communication interface, which
-                doesn't seem like a difficult task, but it is actually rather difficult. Many allow tuning properties, such as acceleration
+            <p>For motor driver selection, I appear to be severely limited. The primary reason being that many of these
+                motor drivers come
+                pre-mounted onto daughter-boards, which require justification to use (As per the project requirements).
+                Ideally the control
+                logic is at the same voltage as the microcontroller. It also requires control over a serial
+                communication interface, which
+                doesn't seem like a difficult task, but it is actually rather difficult. Many allow tuning properties,
+                such as acceleration
                 speed over a serial interface, but operate using a pulse-step system.
             </p>
 
@@ -516,20 +520,20 @@
                             <ul>
                                 <li>Definitely overkill for the given application</li>
                                 <li>Requires a lot of support hardware to utilize all functions</li>
-                                <li>Intended for far more serious applications, meaning plenty of safety lockouts and potential sticking points</li>
+                                <li>Intended for far more serious applications, meaning plenty of safety lockouts and
+                                    potential sticking points</li>
                             </ul>
                         </td>
                         <td>
-                            <a
-                                href="https://www.digikey.com/en/products/detail/stmicroelectronics/L6470H/2682927">
+                            <a href="https://www.digikey.com/en/products/detail/stmicroelectronics/L6470H/2682927">
                                 <div class="digikey-link"></div>
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td>EMC2301-1-ACZL-TR</td>
-                        <td><img src="media/Component_Selection/EMC2301.bmp" alt="MC Motor Driver"
-                                class="small-image"></td>
+                        <td><img src="media/Component_Selection/EMC2301.bmp" alt="MC Motor Driver" class="small-image">
+                        </td>
                         <td>
                             <ul>
                                 <li>Very cheap </li>
@@ -540,7 +544,8 @@
                         <td>
                             <ul>
                                 <li>Impercise position, as it does not operate in steps</li>
-                                <li>Designed to drive fan motors, which will take adaptation to utilize for my requirements</li>
+                                <li>Designed to drive fan motors, which will take adaptation to utilize for my
+                                    requirements</li>
                             </ul>
                         </td>
                         <td>
@@ -593,17 +598,150 @@
                         <td>L6470H</td>
                         <td><img src="media/Component_Selection/l6479h.bmp" alt="MotorDriver" class="small-image">
                         </td>
-                        <td>None of the options are particularly great, but looking around (And given my understanding of the requirements),
-                            it appears that this isn't a common issue. Generally stepper motors are controlled by daughter-boards or utilize
-                            onboard hardware for interfacing, which is against the rules of the assignment. If the rules change or are redefined
+                        <td>None of the options are particularly great, but looking around (And given my understanding
+                            of the requirements),
+                            it appears that this isn't a common issue. Generally stepper motors are controlled by
+                            daughter-boards or utilize
+                            onboard hardware for interfacing, which is against the rules of the assignment. If the rules
+                            change or are redefined
                             I will likely replace this with an easier option to save time on fabrication.
                         </td>
                     </tr>
                 </tbody>
             </table>
-
         </div>
     </div>
+
+    <!-- Motor Dropdown -->
+    <div class="dropdown-container-alt" id="motorContainer">
+
+        <div class="dropdown" onclick="toggleTable('Motor')">Motor Selection</div>
+
+        <div id="Motor" class="hidden">
+
+            <p>For motor selection I am only looking for a few things. It needs to be easy to connect 3d printed hardware
+                to, as that is the intended interface, and it needs to be compatable with the selected motor driver, which
+                is actually very easy since the motor driver I selected is suprisingly dynamic and has plenty of tunable 
+                settings. 
+            </p>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Component</th>
+                        <th>Image</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                        <th>Hyperlink</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ROB-09238</td>
+                        <td><img src="media/Component_Selection/ROB-09238.bmp" alt="ROB Stepper" class="small-image">
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Reliable</li>
+                                <li>Used extensively for personal projects</li>
+                                <li>More than enough torque for my application</li>
+                                <li>Uses a NEMA 17 mount, so I can purchase the mount pre-manufactured</li>
+                                <li>Runs off 12V, which matches the unregulated power-input</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Designed for hobbyists, seems to have a relatively high manufacturing failure rate</li>
+                                <li>Round shaft, so set screw will be required to attach to hardware </li>
+                            </ul>
+                        </td>
+                        <td>
+                            <a
+                                href="https://www.digikey.com/en/products/detail/sparkfun-electronics/ROB-09238/5318747">
+                                <div class="digikey-link"></div>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>MIKROE-1530</td>
+                        <td><img src="media/Component_Selection/MIKROE.bmp" alt="MikroElektronika Motor" class="small-image">
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Flattened-shaft axle making external mounting trivial</li>
+                                <li>Small form-factor allows space saving</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Runs at 5v, meaning another voltage regulator would be required</li>
+                                <li>Relatively low torque may restrict other design considerations</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <a
+                                href="https://www.digikey.com/en/products/detail/mikroelektronika/MIKROE-1530/5724295">
+                                <div class="digikey-link"></div>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Adafruit 324</td>
+                        <td><img src="media/Component_Selection/AdafruitMotor.bmp" alt="Adafruit Motor"
+                                class="small-image">
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Very popular for hobbist applications, plenty of online support </li>
+                                <li>Reliable, often used for 3d printers</li>
+                                <li>I already own plenty, which drives down manufacturing cost</li>
+                                <li>Flatted shaft makes hardware mounting fairly easy</li>
+                                <li>Requires 12v, which is the unregulated power supply input</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>Larger than some alternatives</li>
+                                <li>More expensive than some alternatives</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <a
+                                href="https://www.digikey.com/en/products/detail/adafruit-industries-llc/324/5022791">
+                                <div class="digikey-link"></div>
+                            </a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <h3> My Selection </h3>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Component</th>
+                        <th>Image</th>
+                        <th>Justification</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Adafruit 324</td>
+                        <td><img src="media/Component_Selection/AdafruitMotor.bmp" alt="Adafruit Motor"
+                                class="small-image"></td>
+                        <td>Component familiarity combined with access to years of online discussion makes this the
+                            superior choice. Already owning the part helps as well, as it negates the price downside. The
+                            keyed axle makes mounting it to the 3d printed components a breeze. The only comparable option
+                            would be the ROB-09238, but familiarity has immense value to me, especially given the complexity
+                            of the motor driver selected. I would rather the motor itself be the easiest part to integrate.
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
     <!-- Toggle dropdown script -->
     <script>
         function toggleTable(tableId) {
