Finalized hardware design

--- a/HardwareSchematic.html
+++ b/HardwareSchematic.html
@@ -47,7 +47,11 @@
 
     <div id="dropdown2" class="dropdown-content" style="display: none;">
         <div class="deployable-content-box">
-            <p class="content-header"> gbye </p>
+            <p class="content-header"> Power System Layout </p>
+            <p class="content-text">
+                Due to the requirements of the project, two power systems are required. One power system is for the I2C chip and the ESP32, while the 5v system is used to drive the pulse pins on the stepper motor driver.
+                It would be considerably easier to move to a 5v microcontroller and I2C IO expander, but this solution is a side-effect of the class-set project requirements.
+            </p>
             <div class="zoomable-container">
                 <img class="zoomable-image" src="media/Hardware_Schematic/Power.png" alt="Hardware Diagram">
             </div>
@@ -57,7 +61,12 @@
 
     <div id="dropdown3" class="dropdown-content" style="display: none;">
         <div class="deployable-content-box">
-            <p class="content-header"> rgargae </p>
+            <p class="content-header"> Motor Driver and I2C IO expander </p>
+            <p class="content-text">
+                My board needs to interface with a 24v stepper motor, driven by an external driver. This driver requires a 5v magnitude for the pulse, which cannot be provided by the 3.3v microcontroller. My solution is
+                to use MOSFETs with a trigger at 0.7v to activate the 5v pulse, which in turn drives the motor driver. The IO expander is required by the project rules, so it is used to write/read a motor lockout to allow the
+                motor to be put in sleep mode, where it will disable the motor control pulses and lock its movement.
+            </p>
             <div class="zoomable-container">
                 <img class="zoomable-image" src="media/Hardware_Schematic/Motor Driver.png" alt="Hardware Diagram">
             </div>
@@ -67,7 +76,14 @@
 
     <div id="dropdown4" class="dropdown-content" style="display: none;">
         <div class="deployable-content-box">
-            <p class="content-header"> dasfad </p>
+            <p class="content-header"> Bill of Materials </p>
+            <p class="content-text">
+                The bill of materials includes all components across all documents, including their quantity, model number, and manufacturer. These will be updated as final part decisions are made. For some components, such as resistors,
+                they will be bulk-ordered to minimize the friction of ordering individual units. We will keep them at the same size to ensure easy integration with whatever our final decision is.
+            </p>
+            <div class="zoomable-container">
+                <img class="zoomable-image" src="media/Hardware_Schematic/BOM.png" alt="Hardware Diagram">
+            </div>
         </div>
     </div>
 
