--- a/Taskbar.html
+++ b/Taskbar.html
@@ -75,7 +75,7 @@
 
     <page-nav>
         <nav-button>
-            <p class="nav-button-text">Subsystem Info</p>
+            <a href="index.md" class="nav-button-text"> Homepage </a>
         </nav-button>
         <nav-button>
             <p class="nav-button-text">Subsystem Info</p>
