--- a/Taskbar.html
+++ b/Taskbar.html
@@ -75,13 +75,13 @@
 
     <page-nav>
         <nav-button>
-            <a href="index.md" class="nav-button-text"> Homepage </a>
+            <a href="index.html" class="nav-button-text"> Homepage </a>
         </nav-button>
         <nav-button>
-            <p class="nav-button-text">Subsystem Info</p>
+            <a href="HardwareSchematic.html" class="nav-button-text"> Component Selection </a>
         </nav-button>
         <nav-button>
-            <p class="nav-button-text">Subsystem Info</p>
+            <a href="componentselection.html" class="nav-button-text"> Hardware Schematic </a>
         </nav-button
     </page-nav>
 </header>
