--- a/Taskbar.html
+++ b/Taskbar.html
@@ -39,6 +39,10 @@
             font-weight: normal;
         }
 
+        nav-button:hover {
+            background-color:rgb(131, 131, 131);
+        }
+
         .nav-button-text {
             color: rgb(0, 0, 0);
             padding: auto;
@@ -50,6 +54,7 @@
             letter-spacing: 0.1vw;
             overflow:hidden;
             margin:auto;
+            text-decoration: none;
         }
 
         .site-name {
