--- a/Taskbar.html
+++ b/Taskbar.html
@@ -83,10 +83,13 @@
             <a href="index.html" class="nav-button-text"> Homepage </a>
         </nav-button>
         <nav-button>
-            <a href="HardwareSchematic.html" class="nav-button-text"> Component Selection </a>
+            <a href="HardwareSchematic.html" class="nav-button-text"> Hardware Schematic </a>
         </nav-button>
         <nav-button>
-            <a href="componentselection.html" class="nav-button-text"> Hardware Schematic </a>
+            <a href="componentselection.html" class="nav-button-text"> Component Selection </a>
+        </nav-button
+        <nav-button>
+            <a href="block-diagram.html" class="nav-button-text"> Block Diagram </a>
         </nav-button
     </page-nav>
 </header>
