Block-diagram integration

--- a/Taskbar.html
+++ b/Taskbar.html
@@ -87,9 +87,9 @@
         </nav-button>
         <nav-button>
             <a href="componentselection.html" class="nav-button-text"> Component Selection </a>
-        </nav-button
+        </nav-button>
         <nav-button>
             <a href="block-diagram.html" class="nav-button-text"> Block Diagram </a>
-        </nav-button
+        </nav-button>
     </page-nav>
 </header>
