--- a/block-diagram.html
+++ b/block-diagram.html
@@ -12,18 +12,14 @@
     <div id="header"></div>
 
     <content-section>
-        <h1 class="content-header">Welcome to Dominick Trusko's Engineering 314 personal datasheet website</h1>
+        <h1 class="content-header">Block Diagram</h1>
         <div class="content-text">
-            <p> 
-                This website will be used to categorize and store all information relevant to the development and
-                production of my personal subsystem board.
+            <p class="content-text">
+                My personal subsystem is defined on the <a href="index.html">homepage</a>. The hardware design for this subsystem is actually rather simple, which should leave
+                plenty of time for the complex networking integration I intend to do with my subsystem. 
             </p>
-            <p> 
-                This website was custom-designed using HTML5 with CSS and Javascript. If content fails to load, or appears to stream off the screen, please switch to a "modern" web browser (Evergreen).
-                This classification includes Firefox, Safari, and all Chromium browsers (Google Chrome, Brave, Opera, ect.).
-            </p>
-            <p> 
-Please use the top bar to navigate the website. Some pages may only be accessible through other pages, if you have any questions regarding how to find content please contact me and I would be happy to oblige.            </p>
+
+            <img src="media/Block_Diagram/BlockDiagram.png" alt="" class="zoomable-image">
         </div>
     </content-section>
 
