--- a/HardwareSchematic.html
+++ b/HardwareSchematic.html
@@ -25,8 +25,8 @@
             onclick="toggleDropdown(this, 'dropdown1')">Microcontroller</button>
         <button class="horizontal-content-selection" onclick="toggleDropdown(this, 'dropdown2')">Power Supply</button>
         <button class="horizontal-content-selection" onclick="toggleDropdown(this, 'dropdown3')">Motor Driver</button>
-        <button class="horizontal-content-selection" onclick="toggleDropdown(this, 'dropdown4')">Bill of
-            Materials</button>
+        <button class="horizontal-content-selection" onclick="toggleDropdown(this, 'dropdown4')">BOM / Power
+            Budget</button>
     </horizontal-content-view>
 
     <div id="dropdown1" class="dropdown-content" style="display: none;">
@@ -38,7 +38,8 @@
                 this header is not capable of powering the circuit, so an external power supply is required
             </p>
             <div class="zoomable-container">
-                <img class="zoomable-image" src="media/Hardware_Schematic/microcontroller.png" alt="Hardware Diagram">
+                <img class="zoomable-image" src="media/Hardware_Schematic/microcontroller-system.png"
+                    alt="Hardware Diagram">
             </div>
         </div>
 
@@ -49,41 +50,67 @@
         <div class="deployable-content-box">
             <p class="content-header"> Power System Layout </p>
             <p class="content-text">
-                Due to the requirements of the project, two power systems are required. One power system is for the I2C chip and the ESP32, while the 5v system is used to drive the pulse pins on the stepper motor driver.
-                It would be considerably easier to move to a 5v microcontroller and I2C IO expander, but this solution is a side-effect of the class-set project requirements.
+                Due to the requirements of the project, two power systems are required. One power system is for the I2C
+                chip and the ESP32, while the 5v system is used to drive the pulse pins on the stepper motor driver.
+                It would be considerably easier to move to a 5v microcontroller and I2C IO expander, but this solution
+                is a side-effect of the class-set project requirements.
             </p>
             <div class="zoomable-container">
-                <img class="zoomable-image" src="media/Hardware_Schematic/Power.png" alt="Hardware Diagram">
+                <img class="zoomable-image" src="media/Hardware_Schematic/power-system.png" alt="Hardware Diagram">
             </div>
         </div>
-        
+
     </div>
 
     <div id="dropdown3" class="dropdown-content" style="display: none;">
         <div class="deployable-content-box">
             <p class="content-header"> Motor Driver and I2C IO expander </p>
             <p class="content-text">
-                My board needs to interface with a 24v stepper motor, driven by an external driver. This driver requires a 5v magnitude for the pulse, which cannot be provided by the 3.3v microcontroller. My solution is
-                to use MOSFETs with a trigger at 0.7v to activate the 5v pulse, which in turn drives the motor driver. The IO expander is required by the project rules, so it is used to write/read a motor lockout to allow the
+                My board needs to interface with a 24v stepper motor, driven by an external driver. This driver requires
+                a 5v magnitude for the pulse, which cannot be provided by the 3.3v microcontroller. My solution is
+                to use MOSFETs with a trigger at 0.7v to activate the 5v pulse, which in turn drives the motor driver.
+                The IO expander is required by the project rules, so it is used to write/read a motor lockout to allow
+                the
                 motor to be put in sleep mode, where it will disable the motor control pulses and lock its movement.
             </p>
             <div class="zoomable-container">
-                <img class="zoomable-image" src="media/Hardware_Schematic/Motor Driver.png" alt="Hardware Diagram">
+                <img class="zoomable-image" src="media/Hardware_Schematic/motor-system.png" alt="Hardware Diagram">
             </div>
         </div>
-        
+
     </div>
 
     <div id="dropdown4" class="dropdown-content" style="display: none;">
         <div class="deployable-content-box">
-            <p class="content-header"> Bill of Materials </p>
+            <p class="content-header"> BOM / Power Budget </p>
             <p class="content-text">
-                The bill of materials includes all components across all documents, including their quantity, model number, and manufacturer. These will be updated as final part decisions are made. For some components, such as resistors,
-                they will be bulk-ordered to minimize the friction of ordering individual units. We will keep them at the same size to ensure easy integration with whatever our final decision is.
+                The bill of materials includes all components across all documents, including their quantity, model
+                number, and manufacturer. These will be updated as final part decisions are made. For some components,
+                such as resistors,
+                they will be bulk-ordered to minimize the friction of ordering individual units. We will keep them at
+                the same size to ensure easy integration with whatever our final decision is.
             </p>
             <div class="zoomable-container">
-                <img class="zoomable-image" src="media/Hardware_Schematic/BOM.png" alt="Hardware Diagram">
+                <img class="zoomable-image" src="media/Hardware_Schematic/bom.png" alt="Hardware Diagram">
             </div>
+
+            <p class="content-header"> Power Budget </p>
+            <p class="content-text">
+                To ensure sufficient power flow from the supply to adequately power all required hardware, I have
+                generated this power budget showing the allocation required
+                to drive all necessary hardware. Due to the majority of my power being used from an external supply to
+                drive the stepper motor, the only components with major power
+                draw are the ESP32, particularly during wifi transmission and SSID detection.
+            </p>
+            <p class="content-text">
+                I have elected to only show components that actually have a notable power draw to minimize the work
+                required to streamline the document, especially given the quantity of individual components.
+            </p>
+            <img style="max-width: max-content; max-height: max-content; margin:auto; margin-bottom: 2vh;"
+                src="media/Hardware_Schematic/power-budget.png" alt="Power Budget Image">
+            <p class="content-text">
+                The output of my voltage regulator is 500mA at 3.3v. Which means that it is capable of powering all hardware during peak output
+            </p>
         </div>
     </div>
 
