--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
     <content-section>
         <h1 class="content-header">Welcome to Dominick Trusko's Engineering 314 personal datasheet website</h1>
         <div class="content-text">
-            <p> 
+            <p>
                 This website will be used to categorize and store all information relevant to the development and
                 production of my personal subsystem board.
             </p>
-            <p> 
-                This website was custom-designed using HTML5 with CSS and Javascript. If content fails to load, or appears to stream off the screen, please switch to a "modern" web browser (Evergreen).
-                This classification includes Firefox, Safari, and all Chromium browsers (Google Chrome, Brave, Opera, ect.).
+            <p>
+                This website was custom-designed using HTML5 with CSS and Javascript. If content fails to load, or
+                appears to stream off the screen, please switch to a "modern" web browser (Evergreen).
+                This classification includes Firefox, Safari, and all Chromium browsers (Google Chrome, Brave, Opera,
+                ect.).
             </p>
-            <p> 
-Please use the top bar to navigate the website. Some pages may only be accessible through other pages, if you have any questions regarding how to find content please contact me and I would be happy to oblige.            </p>
+            <p>
+                Please use the top bar to navigate the website. Some pages may only be accessible through other pages,
+                if you have any questions regarding how to find content please contact me and I would be happy to
+                oblige. </p>
         </div>
     </content-section>
 
