--- a/Taskbar.html
+++ b/Taskbar.html
@@ -13,7 +13,7 @@
         page-header {
             background: linear-gradient(to right, hsl(0, 98%, 34%), rgb(179, 97, 94));
             display: flex;
-            height: 15vh;
+            height: 9vw;
             width: 100vw;
             margin: 0px;
         }
@@ -21,7 +21,7 @@
         page-nav {
             background-color: rgb(180, 180, 180);
             display: flex;
-            height:8vh;
+            height:6vw;
             width: 100vw;
             flex-direction: row;
         }
