Microcontroller selection fix

--- a/componentselection.html
+++ b/componentselection.html
@@ -261,28 +261,28 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>PIC18F47Q10 TQFP/44</td>
-                        <td><img src="media/Component_Selection/pic.bmp" alt="PIC Microcontroller" class="small-image">
+                        <td>ESP32-S3-WROOM-1</td>
+                        <td><img src="media/Component_Selection/esp-32.png" alt="ESP-32" class="small-image">
                         </td>
                         <td>
                             <ul>
                                 <li>Familiarity with programming interface</li>
-                                <li>Inexpensive</li>
+                                <li>High per-pin current allowance</li>
                                 <li>Plentiful documentation</li>
                                 <li>Teaching-team support</li>
                                 <li>Likely to be popular amongst students (Better community support)</li>
-                                <li>Higher internal clock (64MHz)</li>
+                                <li>Easy wifi integration</li>
                             </ul>
                         </td>
                         <td>
                             <ul>
                                 <li>Overkill given the project requirements</li>
-                                <li>Restricted access to python libraries without manual labor</li>
+                                <li>High power requirements (~500mA peak)</li>
                             </ul>
                         </td>
                         <td>
                             <a
-                                href="https://www.digikey.com/en/products/detail/microchip-technology/PIC18F47Q10-I-PT/10187786">
+                                href="https://www.digikey.com/en/products/detail/espressif-systems/ESP32-S3-WROOM-1-N8/15200089">
                                 <div class="digikey-link"></div>
                             </a>
                         </td>
@@ -317,27 +317,28 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>ATTINY202-SSFR</td>
-                        <td><img src="media/Component_Selection/MiniAVR.bmp" alt="MiniAVR Microcontroller"
-                                class="small-image">
+                        <td>PIC18F47Q10 TQFP/44</td>
+                        <td><img src="media/Component_Selection/pic.bmp" alt="PIC Microcontroller" class="small-image">
                         </td>
                         <td>
                             <ul>
-                                <li>Extremely small</li>
-                                <li>Extremely cheap</li>
-                                <li>Programmed using MPLab</li>
-                                <li>Few pins to solder</li>
+                                <li>Familiarity with programming interface</li>
+                                <li>Inexpensive</li>
+                                <li>Plentiful documentation</li>
+                                <li>Teaching-team support</li>
+                                <li>Likely to be popular amongst students (Better community support)</li>
+                                <li>Higher internal clock (64MHz)</li>
                             </ul>
                         </td>
                         <td>
                             <ul>
-                                <li>Requires multiplexing for input/outputs</li>
-                                <li>Very slow internal oscillator (16MHz)</li>
+                                <li>Overkill given the project requirements</li>
+                                <li>Restricted access to python libraries without manual labor</li>
                             </ul>
                         </td>
                         <td>
                             <a
-                                href="https://www.digikey.com/en/products/detail/microchip-technology/ATTINY202-SSFR/9554943">
+                                href="https://www.digikey.com/en/products/detail/microchip-technology/PIC18F47Q10-I-PT/10187786">
                                 <div class="digikey-link"></div>
                             </a>
                         </td>
@@ -357,8 +358,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>PIC18F47Q10 TQFP/44</td>
-                        <td><img src="media/Component_Selection/pic.bmp" alt="PIC Microcontroller" class="small-image">
+                        <td>ESP-32-WROOM-1</td>
+                        <td><img src="media/Component_Selection/esp-32.png" alt="ESP-32" class="small-image">
                         </td>
                         <td>Project scope will likely be defined by my ability to integrate other systems
                             with the microcontroller
