--- a/Taskbar.html
+++ b/Taskbar.html
@@ -93,6 +93,9 @@
             <nav-button>
                 <a href="block-diagram.html" class="nav-button-text"> Block Diagram </a>
             </nav-button>
+            <nav-button>
+                <a href="https://recpal.github.io/Group304EGR314.github.io/" class="nav-button-text"> Team Page </a>
+            </nav-button>
         </page-nav>
     </header>
 </body>
